# YP_ugc_sprint_2

./: .gitignore  README.md  STYLEGUIDE.md  docker-compose.tests.yaml  docker-compose.yaml  setup.cfg
.github/workflows/: linters.yml  tests.yml
admin_panel_service/: .dockerignore  .env.example  Dockerfile  docker-entrypoint.sh  pyproject.toml
admin_panel_service/app/config/: .env.example  settings.py  urls.py
admin_panel_service/app/config/components/: applications.py  database.py  debug.py  i18n.py  middleware.py
admin_panel_service/app/movies/: admin.py  auth.py  models.py
admin_panel_service/app/movies/api/v1/: urls.py
admin_panel_service/app/movies/locale/en/LC_MESSAGES/: django.po
admin_panel_service/app/movies/locale/ru/LC_MESSAGES/: django.po
admin_panel_service/app/movies/migrations/: 0001_initial.py  0002_user.py
admin_panel_service/uwsgi/: uwsgi.ini
auth_service/: .env.example  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
auth_service/src/: main.py
auth_service/src/api/v1/: auth.py  permissions.py  roles.py  users.py
auth_service/src/core/: config.py  logger.py  messages.py
auth_service/src/db/: postgres.py  redis.py
auth_service/src/db/migrations/: env.py
auth_service/src/db/migrations/versions/: 2024_02_10_1601-a5d03ff6cdb9_.py
auth_service/src/middleware/: access_jwt.py  refresh_jwt.py
auth_service/src/models/: login_history.py  oauth_provider.py  permission.py  role.py  role_permission.py  user.py
auth_service/src/schemas/: auth.py  login_history.py  permission.py  role.py  user.py
auth_service/src/services/: auth.py  base.py  permission.py  role.py  user.py  utils.py
auth_service/src/services/abstract/: auth.py  cache.py  data_storage.py
auth_service/src/services/data_repository/: postgres.py  postgres_crud.py  redis_cache.py
auth_service/src/tools/: init_db.py
auth_service/tests/: conftest.py
auth_service/tests/functional/: settings.py
auth_service/tests/functional/fixtures/: common.py  postgres.py
auth_service/tests/functional/src/: __init__.py  test_auth.py  test_permissions.py  test_roles.py  test_users.py
auth_service/tests/functional/utils/: wait_for_dependencies.py
content_delivery_service/: .env.example  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
content_delivery_service/src/: main.py
content_delivery_service/src/core/: config.py  logger.py  messages.py
content_delivery_service/src/db/: elastic.py  redis.py
content_delivery_service/src/middleware/: external_auth.py
content_delivery_service/src/models/: film.py  genre.py  person.py
content_delivery_service/src/queries/: base.py  film.py  genre.py  person.py
content_delivery_service/src/schemas/: base.py  film.py  genre.py  person.py
content_delivery_service/src/services/: base.py  elasticsearch.py  film.py  genre.py  person.py  redis_cache.py
content_delivery_service/tests/: conftest.py
content_delivery_service/tests/functional/: settings.py
nginx/: nginx.conf
nginx/configs/: admin-panel.conf  auth-service.conf  content-delivery-service.conf  jaeger-ui.conf  ugc-operations-service.conf  ugc-service.conf
postgres_to_elastic_etl/: .env.example  Dockerfile  Makefile  README.md  docker-entrypoint.sh  dump.sql  pyproject.toml
postgres_to_elastic_etl/src/: data_transformer.py  decorators.py  elasticsearch_loader.py  elasticsearch_mapping.py  logger.py  main.py  postgres_extractor.py  settings.py  sql_queries.py
postgres_to_elastic_etl/src/state/: base_storage.py  json_file_storage.py  models.py  state.py
ugc_operations_service/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
ugc_operations_service/deploy/: logstash.conf
ugc_operations_service/deploy/filebeat/: filebeat.yml  filebeat_nginx.yml
ugc_operations_service/nginx_tests/: Dockerfile  nginx.conf
ugc_operations_service/nginx_tests/configs/: auth-service.conf  ugc-operations-service.conf
ugc_operations_service/research/: .env.example  README.md  docker-compose.yaml  pyproject.toml
ugc_operations_service/research/src/: config.py  helpers.py  prepare_databases.py  run_operations.py  show_results.py
ugc_operations_service/research/src/managers/: csv_manager.py  data_manager.py  mongo_manager.py  postgres_manager.py
ugc_operations_service/research/src/services/: mongo_service.py  postgres_service.py
ugc_operations_service/src/: .dockerignore  docker-entrypoint.sh  main.py
ugc_operations_service/src/api/v1/: bookmarks.py  likes.py  reviews.py
ugc_operations_service/src/core/: config.py  logger.py  messages.py
ugc_operations_service/src/db/: mongo.py
ugc_operations_service/src/exceptions/: handlers.py
ugc_operations_service/src/middleware/: jwt.py
ugc_operations_service/src/schemas/: base.py  bookmark.py  like.py  review.py
ugc_operations_service/src/services/: base.py  bookmark.py  like.py  review.py
ugc_operations_service/src/services/abstract/: data_storage.py
ugc_operations_service/src/services/data_repository/: mongo.py  mongo_crud.py
ugc_operations_service/tests/: conftest.py
ugc_operations_service/tests/functional/: settings.py
ugc_operations_service/tests/functional/fixtures/: common.py
ugc_operations_service/tests/functional/src/: test_bookmarks.py  test_likes.py  test_reviews.py
ugc_operations_service/tests/functional/utils/: wait_for_dependencies.py
ugc_service/: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml
ugc_service/app/: main.py  wsgi_app.py
ugc_service/app/api/v1/: events.py
ugc_service/app/core/: config.py  logger.py  logger_class.py
ugc_service/app/schemas/: base.py  bookmark.py  click.py  comment.py  like.py  movie_filter_request.py  movie_player_change.py  movie_watch_time.py
ugc_service/app/services/: kafka.py
ugc_service/etl/: Dockerfile  ETL.py  create_schema.py  pyproject.toml  requirements.txt  start_service.sh
ugc_service/etl/core/: config.py  logger.py
ugc_service/etl/data/: schema.py
ugc_service/etl/db/: abc.py  click.py  kafka.py
ugc_service/etl/service/: other_service.py
(+15 files in other folders)
